Cosmetic improvement to prevent page icon squishing up to the table.

--- a/templates/default/site.css
+++ b/templates/default/site.css
@@ -300,3 +300,7 @@ table.messagelist th {
 ul#states li {
     padding-bottom: 0.5em;
 }
+
+.cleared {
+    clear: both;
+}
